Resolves: tdf#143993 don't change FolderPicker to FilePicker if init called

make SIMPLE continue to map to E_CREATE_OPEN_DIALOG for a file dialog but
map to E_CREATE_FOLDER_PICKER for a folder dialog

Change-Id: I37b0cc318a06b1b16fae3c3dd99def4322f771f2
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/120853
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolanm@redhat.com>